<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:scaleType="centerInside"
        android:src="@drawable/screensaver_portrait"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/DexaProExtraBold.White.ScreensaverTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:gravity="center_horizontal"
        android:text="@string/tapToOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubtitle"
        style="@style/ManropeBold.White.ScreensaverSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center_horizontal"
        android:text="@string/skipTheWaitWith"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvSubtitleIcon"
        style="@style/ManropeBold.White.ScreensaverSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/primary_margin"
        android:foregroundGravity="center_vertical"
        android:gravity="center_horizontal"
        android:text="@string/oneMarket"
        app:drawableStartCompat="@drawable/ic_icon_screensaver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle" />

</androidx.constraintlayout.widget.ConstraintLayout>