<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="400dp"
        android:layout_marginStart="@dimen/terminalDialogHorizontalMargin"
        android:layout_marginTop="@dimen/terminalDialogVerticalMargin"
        android:layout_marginEnd="@dimen/terminalDialogHorizontalMargin"
        android:layout_marginBottom="@dimen/terminalDialogVerticalMargin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_grey">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/titleScreenMargin"
                android:layout_marginTop="@dimen/titleScreenMargin"
                android:text="@string/cancel"
                android:textColor="@color/blue"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/titleScreenMargin"
                android:layout_marginEnd="@dimen/titleScreenMargin"
                android:padding="8dp"
                android:text="@string/plus"
                android:textColor="@color/blue"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/titleScreenMargin"
                android:layout_marginTop="28dp"
                android:text="@string/locations"
                android:textColor="@color/black"
                android:textSize="@dimen/mainTitleSize"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_cancel" />

            <TextView
                android:id="@+id/tv_found_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/titleScreenMargin"
                android:layout_marginTop="@dimen/titleScreenMargin"
                android:inputType="textCapCharacters"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/smallTitleSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                tools:text="@string/fetchingLocation" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_locations"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_found_location" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>